<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/FirstNameBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddressBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastNameBox" />

    <EditText
        android:id="@+id/PhoneNumberBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddressBox" />

    <EditText
        android:id="@+id/LastNameBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameBox" />

    <Button
        android:id="@+id/RegisterNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="36dp"
        android:text="Registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>